--- a/report_barrier/relatorio.tex
+++ b/report_barrier/relatorio.tex
@@ -254,7 +254,7 @@ A expressão da hessiana será obtida de forma idêntica pelas equações (\ref{
 
 \begin{equation}
 \label{eq.hess}
-\nabla^2 f(z) = t (\nabla^2 f_0(z))^\top + \nabla^2 \phi (z)
+\nabla^2 f(z) = t (\nabla^2 f_0(z)) + \nabla^2 \phi (z)
 \end{equation}
 
 \begin{equation}
