--- a/report_barrier/relatorio.tex
+++ b/report_barrier/relatorio.tex
@@ -76,7 +76,7 @@ Para a obtenção dos resultados do problema descrito anteriormente, a função 
 Apresenta-se de seguida a descrição das variáveis da função de otimização:
 
 \begin{itemize}
-\item  $\omega$ $\rightarrow$ vetor de dimensão \textit{n}, onde cada posição \textit{i}, contém a fração do dinheiro a investir no \textit{asset i} para obter o máximo de lucro. Será esta a variável que se pretende a maximizar;
+\item  $\omega$ $\rightarrow$ vetor de dimensão \textit{n}, onde cada posição \textit{i}, contém a fração do dinheiro a investir no \textit{asset i} para obter o máximo de lucro. Será esta a variável que se pretende otimizar;
 
 \item $\mu$ $\rightarrow$ vetor de dimensão \textit{n}, onde cada posição \textit{i}, contém o retorno esperado para o \textit{asset i};
 
