--- a/report_barrier/relatorio.tex
+++ b/report_barrier/relatorio.tex
@@ -277,25 +277,27 @@ Para verificar o correto funcionamento de ambos os programas realizaram-se teste
 
 \begin{itemize}
 \item Igualar $\gamma$ a zero, ou seja, caso o utilizador não tenha quaisquer preocupações com o risco associado a cada investimento. Espera-se, portanto, que o portfólio obtido seja investir todo o capital no \textit{asset} com maior retorno, independentemente do risco.
-\begin{figure}[htp]
-\captionsetup{font=scriptsize}  
-  \centering
-  \includegraphics[width=0.9\columnwidth]{./gama_0}
-  \caption{Portfólio com $\gamma$ igual a 0}
-  \label{fig:caso1}
-\end{figure}
 
 Na figura \ref{fig:caso1} observa-se que, de facto, o capital foi investido no \textit{asset} de maior retorno. Existem pequenas diferenças entre o portfólio apresentado pelos dois programas, pelo que se pode observar que no resultado do \textit{CVX} o investimento é total no \textit{asset} de maior retorno, enquanto que no resultado do \textit{Barrier Method} existem pequenas quantias investidas pelos outros \textit{assets}.
-\vskip 4mm
 
 \item Igualar $\gamma$ a 100 (100 é um valor arbitrário), pretende-se ilustrar uma aversão ao risco muito elevada por parte do utilizador. Espera-se um portfólio bastante conservador, ou seja, que seja investido capital apenas no(s) \textit{asset(s)} com menor risco associado. Quando $\gamma$ tende para infinito, o portfólio será investido somente nos \textit{assets} com menor risco associado, ao contrário do caso em que $\gamma$ é igual a 100, onde existem pequenos investimentos nos outros \textit{assets}.
 
-\begin{figure}[htp]
-\captionsetup{font=scriptsize}  
-  \centering
-  \includegraphics[width=0.9\columnwidth]{./gama_100}
-  \caption{Portfólio com $\gamma$ igual a 100 e alguns retornos negativos}
-  \label{fig:caso2.1}
+\begin{figure}[!htb]
+    \centering
+    \begin{minipage}{.5\columnwidth}
+       \captionsetup{font=scriptsize}  
+ 		\centering
+  		\includegraphics[scale=0.3]{./gama_0}
+  		\caption{Portfólio com $\gamma$ igual a 0}
+  		\label{fig:caso1}
+    \end{minipage}%
+    \begin{minipage}{0.5\columnwidth}
+       \captionsetup{font=scriptsize}  
+  		\centering
+  		\includegraphics[scale=0.3]{./gama_100}
+  		\caption{Portfólio com $\gamma$ igual a 100 e alguns retornos negativos}
+  		\label{fig:caso2.1}
+    \end{minipage}
 \end{figure}
 
 Na figura \ref{fig:caso2.1} a solução dada por ambos os programas é em tudo semelhante, note-se que, apesar das \textit{rates of return} dos \textit{assets} de menor risco serem negativas, a aversão ao risco do utilizador irá gerar um portfólio em que a importância dada ao risco é bastante superior à dos retornos. A divisão do portfólio pelos dois \textit{assets} de menor risco é a esperada, ambos os programas \: escolheram investir mais capital no \textit{asset} com maior retorno.
@@ -306,14 +308,28 @@ Na figura \ref{fig:caso2.1} a solução dada por ambos os programas é em tudo s
 \begin{figure}[htp]
 \captionsetup{font=scriptsize}  
   \centering
-  \includegraphics[width=0.9\columnwidth]{./miu_igual_risco_diferente}
+  \includegraphics[scale=0.55]{./miu_igual_risco_diferente}
   \caption{Portfólio com retornos iguais para todos os \textit{assets}}
   \label{fig:caso4}
 \end{figure}
 
 No caso enunciado acima, a solução de portfólio ótima é intuitiva, os programas deverão investir todo o capital no \textit{asset} de menor risco, visto que todos retornam o mesmo valor do investimento inicial. É isto que se comprova na figura \ref{fig:caso4}.
 
+\item Correlação entre \textit{assets}. Criou-se uma matriz de covariâncias que apresenta uma grande correlação entre o \textit{asset} um e o \textit{asset} dois. Deste modo pretende-se verificar se o risco de investir num dado \textit{asset} influencia a decisão de investir noutro. Para este caso foi utilizado $\gamma=1$.
+
+\begin{figure}[htp]
+\captionsetup{font=scriptsize}  
+  \centering
+  \includegraphics[width=0.9\columnwidth]{./correlacao}
+  \caption{Influência de um \textit{asset} noutro}
+  \label{fig:corr}
+\end{figure}
+
+Na figura \ref{fig:corr} pode-se constatar que apesar dos dois primeiros \textit{assets} serem os que têm maiores retornos, o portfolio acaba por dividir os investimentos entre os \textit{assets} dois e três. De notar que os riscos dos \textit{assets} dois, três e quatro não são muito diferentes, pelo que o investimento no \textit{asset} dois seria uma boa solução. Este investimento não é ótimo pois há uma forte correlação entre o um e dois, e portanto, grande parte do investimento é feito em três.
+
 \end{itemize} 
+
+
 
 No gráfico da figura \ref{fig:tempometodos}, é possível observar o tempo requerido para a otimização de uma solução para o problema, consoante a abordagem utilizada, em função do número de variáveis do problema.
 
